--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,6 +42,5 @@
         #footer
           != enki_config[:title] + ' &#169; ' + enki_config[:author, :name]
 
-    = javascript_include_tag 'jquery.js'
-    = javascript_include_tag 'rails.js'
+    = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js'
     = yield(:footer)
