--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,10 @@
     %title= html_title yield(:page_title)
     %meta{'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1'}
     %meta{"http-equiv"=>"Content-Type", :content=>"text/html; charset=utf-8"}
-    %link{:rel => 'shortcut icon', :href => '/favicon.ico'}
+    %meta{:name => "author", :content => "Jinpu Hu"}
+    %meta{:name => "description", :content => "记录和分享自己挖宝的历程 iruby.me "}
+    <meta name="keywords" content="ruby,rails,javascript,vim,architech,math,startup">
+    %link{:href => "data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABmJLR0QAAAAAAAD5Q7t/AAAAc0lEQVQ4y2NgGGjACGP8y8/+D2MzTZzK+H9VMZzPGNbL+OFqOpwvoD0Tro+JUhdQbAD1wuDC601wPxqI+jEGnMmF8zeYTGZM2PAazl8QIDoswyCiagPcjyvaAhhvzr4L56unKjP+L9+ISBed/sMpDAYeAABsxSQQcseOyAAAAABJRU5ErkJggg==", :rel => "icon", :type => "image/x-icon"}
     = stylesheet_link_tag 'application'
 
     = yield(:head)
