--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,7 +7,7 @@
 
   <%= csrf_meta_tag %>
 
-  <%= javascript_include_tag 'jquery-1.5.1.min' %>
+  <%= javascript_include_tag 'http://qunarzz.com/js/jquery/build/jquery-1.5.2.min.js' %>
   <%= javascript_include_tag 'jquery.livequery.js' %>
   <%= javascript_include_tag 'jquery.form.js' %>
   <%= javascript_include_tag 'jquery.easing.1.3.js' %>
