--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,5 +48,5 @@
         #footer
           != enki_config[:title] + ' &#169; ' + enki_config[:author, :name]
 
-    = javascript_include_tag 'jquery-1.5.1.min.js'
+    = javascript_include_tag 'http://qunarzz.com/js/jquery/build/jquery-1.5.2.min.js'
     = yield(:footer)
